Fix banner on mobiles

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -67,4 +67,13 @@ header.masthead {
     font-size: 3rem;
 } 
 
+@media screen and (max-width: 600px) {
+    header.masthead {
+        padding-top: calc(0.5rem + 72px);
+    }
+
+    header.masthead .masthead-content .masthead-heading {
+        font-size: 2rem;  
+    }
+}
  
